[package]
name = "fft-benchmark"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
description = "Benchmark of Fast Fourier transform libraries for Rust"
readme = "README.md"
repository = "https://github.com/astral4/fft-benchmark"
license = "MIT"

[dev-dependencies]
divan = "0.1.13"
phastft = "0.1.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rustfft = "6.2.0"

[[bench]]
name = "phastft"
harness = false

[[bench]]
name = "rustfft"
harness = false

# PhastFT lacks runtime CPU feature detection, so optimal performance requires compiling with -C target-cpu=native
build.rustflags = "-C target-cpu=native"

[lints.rust]
future_incompatible = "warn"
# unused = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_debug_implementations = "deny"
# missing_docs = "deny"
non_ascii_idents = "deny"
nonstandard_style = "deny"
noop_method_call = "deny"
rust_2018_idioms = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"
# unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
# unused_results = "deny"
unused_tuple_struct_fields = "deny"

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
