[package]
name = "fft-benchmark"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
description = "Benchmark of fast Fourier transform libraries for Rust"
readme = "README.md"
repository = "https://github.com/astral4/fft-benchmark"
license = "MIT"

[dev-dependencies]
divan = "0.1.13"
fftw = "0.8.0"
phastft = "0.1.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rustfft = "6.2.0"

[[bench]]
name = "fftw"
harness = false

[[bench]]
name = "phastft"
harness = false

[[bench]]
name = "rustfft"
harness = false

[profile.bench]
lto = true
strip = true
